farmers map spacing fix

--- a/public/assets/scss/partials/_content.scss
+++ b/public/assets/scss/partials/_content.scss
@@ -3486,6 +3486,9 @@ ul, li {
 
 #farmersmap-canvas {
   height: 700px;
+  & + .sv-blank-spacer {
+    display: none;
+  }
 }
 
 #contactsmap-canvas {
